# moco_image_pipeline

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  competition.yaml  docker-compose.yml  kernel_sample.py  pyproject.toml  requirements.txt  sample.py  setup.py  train.py
.github/workflows/: pythonapp.yml
competition/: Bengali.py  BengaliKernel.py
config/: 0000.yaml
config/Bengali/: 0000.yaml  0001.yaml  0002.yaml
config/bengaliai-cv19/: 0000.yaml  0001.yaml  0002.yaml  0003.yaml  0004.yaml  0005.yaml  0006.yaml  0007.yaml  0008.yaml  0009.yaml  0010.yaml  0011.yaml  0012.yaml  0013.yaml  0014.yaml  0015.yaml  0017.yaml  0018.yaml  0019.yaml  0020.yaml  0021.yaml  0022.yaml  0023.yaml  0024.yaml  1000.yaml  1001.yaml  1002.yaml  1003.yaml  1004.yaml  1005.yaml  1006.yaml  1007.yaml  1008.yaml  1009.yaml  1010.yaml  1011.yaml  1012.yaml  1013.yaml  1014.yaml  1015.yaml  (+28 more)
docker/: Dockerfile
lightning_logs/version_0/: events.out.tfevents.1580219220.Berry.28427.0
lightning_logs/version_1/: events.out.tfevents.1580219371.Berry.29163.0
lightning_logs/version_2/: events.out.tfevents.1580219382.Berry.29287.0
mcp/: kernel.py
mcp/augmentation/: __init__.py  album.py  (+5 more)
notebook/: BengaliValidation.ipynb  BengaliValidationUnseen.ipynb  RemoveDirtyLabel.ipynb  RemoveDuplicatedImages.ipynb  parquet2img.ipynb
pipeline/: Bengali.py  BengaliKernel.py  __init__.py  bengali_module.py  convert_parquet2png.py  kernel.py  moco_module.py  train.py
test/: context.py  test_augmentation.py  test_models.py  visualize_augmentation.py
tools/: create_kaggle_metadata.py
(+53 files in other folders)
