[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["mocobt <mocobt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
notebook = "^6.0.3"
matplotlib = "^3.1.3"
mlflow = "^1.6.0"
numba = "^0.48.0"
numpy = "^1.18.1"
opencv-python = "^4.2.0"
pandas = "^1.0.1"
pathlib = "^1.0.1"
Pillow = "6.2.0"
torch = "^1.4.0"
torchvision = "^0.5.0"
tqdm = "^4.42.1"
albumentations = "^0.4.3"
scipy = "^1.4.1"
scikit-learn = "^0.22.1"
PyYAML = "^5.3"
pyarrow = "^0.16.0"
pretrainedmodels = "^0.7.4"
timm = "^0.1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
